updated flow issues and updated some header overflow issues.

--- a/universal/components/Header/styles.css
+++ b/universal/components/Header/styles.css
@@ -9,11 +9,8 @@
   margin: 0 auto;
   padding: 1.25rem 1.25rem;
   float: left;
-  position: absolute;
-  top: 0;
-  left: 0;
   z-index: 1000;
-  overflow-y: visible;
+  overflow: hidden;
   transition: all 200ms cubic-bezier(.04,.39,.94,.53);
   @media bp-papa-bear {
     padding: 1.25rem 3rem 1.25rem 1.25rem;
@@ -32,9 +29,10 @@
   margin: 0 12%;
   padding: 0 0;
   float: left;
-  position: absolute;
+  position: relative;
   top: 1.375rem;
   left: 0;
+  text-align: center;
   z-index: 9999;
   @media bp-papa-bear {
     display: block;
@@ -47,6 +45,7 @@
   }
 }
 #linkHome {
+  display: inline-block;
   margin: 0 0;
   padding: 1rem 1rem;
 }
@@ -71,8 +70,9 @@
   float: left;
   position: absolute;
   top: 0;
-  right: -120%;
-  background: rgba(255, 255, 255, .98);
+  right: -100%;
+  background: rgba(255, 255, 255, .8);
+  overflow: hidden;
   transition: all 200ms cubic-bezier(.04,.39,.94,.53);
   @media bp-papa-bear {
     display: block;
@@ -88,7 +88,7 @@
   display: block;
   width: 100%;
   height: auto;
-  margin: 4rem auto 0 auto;
+  margin: 7rem auto 0 auto;
   padding: 0 0;
   float: left;
   text-align: center;
@@ -265,7 +265,7 @@
   transition: all 150ms cubic-bezier(.04,.39,.94,.53);
 }
 
-.siteHeaderAcitve {
+.siteHeaderActive {
   composes: siteHeader;
   height: 100%;
   .navContainer {
